--- a/scripts/install
+++ b/scripts/install
@@ -4,7 +4,6 @@
 # IMPORT GENERIC HELPERS
 #=================================================
 
-source _common.sh
 source /usr/share/yunohost/helpers
 
 ### Install parameters are automatically saved as settings
@@ -27,28 +26,49 @@ source /usr/share/yunohost/helpers
 ### or 'example__2', '__3'... for multi-instance installs)
 
 #=================================================
-# INITIALIZE AND STORE SETTINGS
-#=================================================
-
-# If you need to, you can define custom settings
-# (or remove this section entirely if not relevant for you)
-foo="bar"
-ynh_app_setting_set --key=foo --value=$foo
-
-ynh_app_setting_set --key=php_upload_max_filesize --value=50M
-ynh_app_setting_set --key=php_post_max_size --value=50M
-
-#=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
 ynh_script_progression "Setting up source files..."
 
-### `ynh_setup_source` is used to install an app from a zip or tar.gz file,
-### downloaded from an upstream source, like a git repository.
-### `ynh_setup_source` use the file manifest.toml
+gpg --import binaryfate.asc
 
-# Download, check integrity, uncompress and patch the source from manifest.toml
-ynh_setup_source --dest_dir="$install_dir"
+wget -O "$install_dir/hashes.txt" "https://www.getmonero.org/downloads/hashes.txt"
+
+gpg --verify "$install_dir/hashes.txt" 2>&1 | grep "Good signature" || ynh_die "Bad signature for hashes.txt"
+
+architecture=$(dpkg --print-architecture)
+
+case "$architecture" in
+    "amd64")
+        wget --content-disposition -P "$install_dir" "https://downloads.getmonero.org/cli/linux64"
+        ;;
+    "arm64")
+        wget --content-disposition -P "$install_dir" "https://downloads.getmonero.org/cli/linuxarm8"
+        ;;
+    "riscv64")
+        wget --content-disposition -P "$install_dir" "https://downloads.getmonero.org/cli/linuxriscv64"
+        ;;
+    "i386")
+        wget --content-disposition -P "$install_dir" "https://downloads.getmonero.org/cli/linux32"
+        ;;
+    # i think armhf is armv7 but im not sure. todo: check
+    "armhf")
+        wget --content-disposition -P "$install_dir" "https://downloads.getmonero.org/cli/linuxarm7"
+        ;;
+    *)
+        ynh_die "Unsupported architecture: $architecture"
+        ;;
+esac
+
+cd "$install_dir"
+sha256sum -c "hashes.txt" --ignore-missing 2>&1 | grep OK || ynh_die "Bad hash for monero.tar.bz2"
+
+# we don't delete the other monero binaries but it should be okay i think. we should have storage for an extra 150~ MB
+find "$install_dir" -type f -name "monero-linux*tar.bz2" -execdir tar xvf {} \;
+find "$install_dir" -type f -name "monero-linux*tar.bz2" -execdir rm {} \;
+monero_dir=$(find "$install_dir" -type d -name "monero*")
+find "monero_dir" -type f -exec mv {} . \;
+rm -r "$monero_dir"
 
 ### $install_dir will automatically be initialized with some decent
 ### permission by default... however, you may need to recursively reapply
@@ -72,13 +92,61 @@ ynh_script_progression "Adding $app's configuration files..."
 ###
 ### Check the documentation of `ynh_config_add` for more info.
 
-ynh_config_add --template="some_config_file" --destination="$install_dir/some_config_file"
+ynh_script_progression "Making onion serivce..."
+
+echo >> "$install_dir/monero_tor.conf" << EOF
+HiddenServiceDir $data_dir/tor/
+HiddenServicePort 18089 127.0.0.1:18089    # interface for wallet ("RPC")
+HiddenServicePort 18084 127.0.0.1:18084    # interface for P2P network
+EOF
+
+echo >> "/etc/tor/torrc" << EOF
+%include $install_dir/monero_tor.conf
+EOF
+
+chmod 444 "$install_dir/monero_tor.conf"
+
+systemctl enable tor --quiet
+ynh_systemd_action --service_name="tor" --action="reload"
+
+onion_hostname=$(cat "$data_dir/tor/hostname")
+
+ynh_script_progression "Onion hostname: $onion_hostname"
+
+ynh_script_progression "Making I2P serivce..."
+
+cat << EOF > /etc/i2pd/tunnels.conf.d/monero-mainnet.conf
+[monero-node]
+type = server
+host = 127.0.0.1
+# Anonymous inbound port
+port = 18085
+inport = 0
+keys = monero-mainnet.dat
+
+[monero-rpc]
+type = server
+host = 127.0.0.1
+# Restricted RPC port
+port = 18089
+keys = monero-mainnet.dat
+EOF
+
+chmod 444 /etc/i2pd/tunnels.conf.d/monero-mainnet.conf
+
+ynh_systemd_action --service_name="i2pd" --action="reload"
+
+i2p_hostname=$(curl -s http://127.0.0.1:7070/?page=i2p_tunnels | grep -Eo "[a-zA-Z0-9./?=_%:-]*" | grep "18089")
+
+ynh_script_progression "I2P hostname: $i2p_hostname"
+
+ynh_config_add --template="monerod.conf" --destination="$install_dir/monerod.conf"
 
 # FIXME: this should be handled by the core in the future
 ### You may need to use chmod 600 instead of 400,
 ### for example if the app is expected to be able to modify its own config
-chmod 400 "$install_dir/some_config_file"
-chown "$app:$app" "$install_dir/some_config_file"
+chmod 400 "$install_dir/monerod.conf"
+chown "$app:$app" "$install_dir/monerod.conf"
 
 ### For more complex cases where you want to replace stuff using regexes,
 ### you shoud rely on ynh_replace (which is basically a wrapper for sed)
@@ -91,23 +159,6 @@ chown "$app:$app" "$install_dir/some_config_file"
 # SYSTEM CONFIGURATION
 #=================================================
 ynh_script_progression "Adding system configurations related to $app..."
-
-### `ynh_config_add_phpfpm` is used to set up a PHP config.
-### You can remove it if your app doesn't use PHP.
-### `ynh_config_add_phpfpm` will use the files conf/extra_php-fpm.conf
-### If you're not using these lines:
-###   - You can remove these files in conf/.
-###   - Remove the section "BACKUP THE PHP-FPM CONFIGURATION" in the backup script
-###   - Remove also the section "REMOVE PHP-FPM CONFIGURATION" in the remove script
-###   - As well as the section "RESTORE THE PHP-FPM CONFIGURATION" in the restore script
-###     with the reload at the end of the script.
-###   - And the section "PHP-FPM CONFIGURATION" in the upgrade script
-
-# Create a PHP-FPM config (with conf/extra_php-fpm.conf being appended to it)
-ynh_config_add_phpfpm
-
-# Create a dedicated NGINX config using the conf/nginx.conf template
-ynh_config_add_nginx
 
 ### `ynh_config_add_systemd` is used to configure a systemd script for an app.
 ### It can be used for apps that use sysvinit (with adaptation) or systemd.
@@ -147,7 +198,7 @@ ynh_config_add_systemd
 ### to proceed if you later realize that you need to enable some flags that
 ### weren't enabled on old installs (be careful it'll override the existing
 ### service though so you should re-provide all relevant flags when doing so)
-yunohost service add "$app" --description="A short description of the app" --log="/var/log/$app/$app.log"
+# yunohost service add "$app" --description="A short description of the app" --log="/var/log/$app/$app.log"
 
 ### `ynh_config_add_logrotate` is used to configure a logrotate configuration for the logs of this app.
 ### Use this helper only if there is effectively a log file for this app.
@@ -158,23 +209,7 @@ yunohost service add "$app" --description="A short description of the app" --log
 ###   - And the section "SETUP LOGROTATE" in the upgrade script
 
 # Use logrotate to manage application logfile(s)
-ynh_config_add_logrotate
-
-# Create a dedicated Fail2Ban config
-ynh_config_add_fail2ban --logpath="/var/log/nginx/${domain}-error.log" --failregex="Regex to match into the log for a failed login"
-
-#=================================================
-# SETUP APPLICATION WITH CURL
-#=================================================
-
-### Use these lines only if the app installation needs to be finalized through
-### web forms. We generally don't want to ask the final user,
-### so we're going to use curl to automatically fill the fields and submit the
-### forms.
-
-# Installation with curl
-ynh_script_progression "Finalizing installation..."
-ynh_local_curl "/INSTALL_PATH" "key1=value1" "key2=value2" "key3=value3"
+ynh_config_add_logrotate --logfile="$data_dir/monero.log"
 
 #=================================================
 # START SYSTEMD SERVICE
