--- a/scripts/install
+++ b/scripts/install
@@ -66,7 +66,7 @@ sha256sum -c "hashes.txt" --ignore-missing 2>&1 | grep OK || ynh_die "Bad hash f
 # we don't delete the other monero binaries but it should be okay i think. we should have storage for an extra 150~ MB
 find "$install_dir" -type f -name "monero-linux*tar.bz2" -execdir tar xvf {} \;
 find "$install_dir" -type f -name "monero-linux*tar.bz2" -execdir rm {} \;
-monero_dir=$(find "$install_dir" -type d -name "monero*")
+monero_dir=$(find "$install_dir" -type d -name "monero-*")
 find "$monero_dir" -type f -exec mv {} . \;
 rm -r "$monero_dir"
 
