--- a/scripts/install
+++ b/scripts/install
@@ -94,13 +94,13 @@ ynh_script_progression "Adding $app's configuration files..."
 
 ynh_script_progression "Making onion serivce..."
 
-echo >> "$install_dir/monero_tor.conf" << EOF
+cat >> "$install_dir/monero_tor.conf" << EOF
 HiddenServiceDir $data_dir/tor/
 HiddenServicePort 18089 127.0.0.1:18089    # interface for wallet ("RPC")
 HiddenServicePort 18084 127.0.0.1:18084    # interface for P2P network
 EOF
 
-echo >> "/etc/tor/torrc" << EOF
+cat >> "/etc/tor/torrc" << EOF
 %include $install_dir/monero_tor.conf
 EOF
 
@@ -115,7 +115,7 @@ ynh_script_progression "Onion hostname: $onion_hostname"
 
 ynh_script_progression "Making I2P serivce..."
 
-cat << EOF > /etc/i2pd/tunnels.conf.d/monero-mainnet.conf
+cat >> /etc/i2pd/tunnels.conf.d/monero-mainnet.conf << EOF
 [monero-node]
 type = server
 host = 127.0.0.1
