--- a/scripts/install
+++ b/scripts/install
@@ -40,20 +40,20 @@ architecture=$(dpkg --print-architecture)
 
 case "$architecture" in
     "amd64")
-        wget --content-disposition -P "$install_dir" "https://downloads.getmonero.org/cli/linux64"
+        wget --content-disposition -P -q "$install_dir" "https://downloads.getmonero.org/cli/linux64"
         ;;
     "arm64")
-        wget --content-disposition -P "$install_dir" "https://downloads.getmonero.org/cli/linuxarm8"
+        wget --content-disposition -P -q "$install_dir" "https://downloads.getmonero.org/cli/linuxarm8"
         ;;
     "riscv64")
-        wget --content-disposition -P "$install_dir" "https://downloads.getmonero.org/cli/linuxriscv64"
+        wget --content-disposition -P -q "$install_dir" "https://downloads.getmonero.org/cli/linuxriscv64"
         ;;
     "i386")
-        wget --content-disposition -P "$install_dir" "https://downloads.getmonero.org/cli/linux32"
+        wget --content-disposition -P -q "$install_dir" "https://downloads.getmonero.org/cli/linux32"
         ;;
     # i think armhf is armv7 but im not sure. todo: check
     "armhf")
-        wget --content-disposition -P "$install_dir" "https://downloads.getmonero.org/cli/linuxarm7"
+        wget --content-disposition -P -q "$install_dir" "https://downloads.getmonero.org/cli/linuxarm7"
         ;;
     *)
         ynh_die "Unsupported architecture: $architecture"
@@ -108,6 +108,9 @@ chmod 444 "$install_dir/monero_tor.conf"
 
 ynh_systemctl --service="tor" --action="enable"
 ynh_systemctl --service="tor" --action="reload"
+
+ynh_script_progression "Sleeping for 15 seconds to allow tor to start and create the onion service..."
+sleep 15
 
 onion_hostname=$(cat "$data_dir/tor/hostname")
 
