--- a/scripts/install
+++ b/scripts/install
@@ -94,31 +94,28 @@ ynh_script_progression "Adding $app's configuration files..."
 
 ynh_script_progression "Making onion serivce..."
 
-cat >> "$install_dir/monero_tor.conf" << EOF
-HiddenServiceDir $data_dir/tor/
+cat >> "/etc/tor/monero_tor.conf" << EOF
+HiddenServiceDir /etc/tor/monerod
 HiddenServicePort 18089 127.0.0.1:18089    # interface for wallet ("RPC")
 HiddenServicePort 18084 127.0.0.1:18084    # interface for P2P network
 EOF
 
+ynh_store_file_checksum "/etc/tor/monero_tor.conf"
+
 cat >> "/etc/tor/torrc" << EOF
-%include $install_dir/monero_tor.conf
+%include /etc/tor/monero_tor.conf
 EOF
 
 chmod 444 "$install_dir/monero_tor.conf"
 
-mkdir -p "$data_dir/tor/"
-chown -R "debian-tor:debian-tor" "$data_dir/tor/"
-chmod 775 "$data_dir/tor/"
+mkdir -p "/etc/tor/monerod"
+chown -R "debian-tor:debian-tor" "/etc/tor/monerod"
+chmod 700 "/etc/tor/monerod"
 
 ynh_systemctl --service="tor" --action="enable"
 ynh_systemctl --service="tor" --action="reload"
 
-ynh_script_progression "Sleeping for 15 seconds to allow tor to start and create the onion service..."
-sleep 15s
-
-chmod 775 "$data_dir/tor/hostname"
-
-onion_hostname=$(cat "$data_dir/tor/hostname")
+onion_hostname=$(cat "/etc/tor/monerod/hostname")
 
 ynh_script_progression "Onion hostname: $onion_hostname"
 
@@ -142,6 +139,8 @@ keys = monero-mainnet.dat
 EOF
 
 chmod 444 /etc/i2pd/tunnels.conf.d/monero-mainnet.conf
+
+ynh_store_file_checksum "/etc/i2pd/tunnels.conf.d/monero-mainnet.conf"
 
 ynh_systemctl --service_name="i2pd" --action="reload"
 
