--- a/scripts/install
+++ b/scripts/install
@@ -30,15 +30,15 @@ source /usr/share/yunohost/helpers
 # https://docs.getmonero.org/interacting/monero-config-file/#syntax
 
 if [ "$prune" = true ]; then
-    $prune=1
+    $prune="1"
 else
-    $prune=0
+    $prune="0"
 fi
 
 if [ "$rpc_node" = true ]; then
-    $rpc_node=1
+    $rpc_node="1"
 else
-    $rpc_node=0
+    $rpc_node="0"
 fi
 
 #=================================================
